# Xtensible

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
xtensible_cli/: __main__.py  consts.py  main.py
xtensible_cli/config/: commands.py
xtensible_cli/plugins/: __init__.py  loader.py  plugin.py
xtensible_cli/utils/: commands.py
